data/all_generated_tests/raw_wast_tests/return_InvalidorInconsistentControlFlowGraph_2902.wast
;; 1. Test a function with nested blocks where the inner block contains a `return` instruction immediately followed by unreachable code in WebAssembly's context validation, and check to see if the Wizard Engine's `setUnreachable` correctly marks the code unreachable.

(assert_invalid
 (module
  (func
   (block
    (block
     (return)
     unreachable
     )
    )
  )
  "unreachable code after return"
 )